<resources>
	<string name="searchres_napps">Found %1$d applications matching \'%2$s\':</string>
	<string name="searchres_oneapp">Found one application matching \'%s\':</string>
	<string name="searchres_noapps">No applications were found matching \'%s\'</string>
	<string name="SignatureMismatch">The new version is signed with a different key to the old one. To install the new version, the old one must be uninstalled first. Please do this and try again. (Note that uninstalling will erase any internal data stored by the application)</string>
	<string name="installIncompatible">It seems like this package is not compatible with your device. Do you want to try and install it anyway?</string>
	<string name="installDowngrade">You are trying to downgrade this application. Doing so might get it to malfunction and even lose your data. Do you want to try and downgrade it anyway?</string>
	<string name="version">Version</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="enable_nfc_send">Enable NFC Send…</string>
	<string name="cache_downloaded">App cache</string>
	<string name="cache_downloaded_on">Keep downloaded apk files on SD card</string>
	<string name="cache_downloaded_off">Do not keep any apk files</string>
	<string name="updates">Updates</string>
	<string name="other">Other</string>
	<string name="last_update_check">Last repo scan: %s</string>
	<string name="never">never</string>
	<string name="update_interval">Automatic update interval</string>
	<string name="update_interval_zero">No automatic app list updates</string>
	<string name="automatic_scan_wifi">Only on wifi</string>
	<string name="automatic_scan_wifi_on">Update app lists automatically only on wifi</string>
	<string name="automatic_scan_wifi_off">Always update app lists automatically</string>
	<string name="notify">Notify</string>
	<string name="notify_on">Notify when updates are available</string>
	<string name="notify_off">Do not notify of any updates</string>
	<string name="update_history">Update history</string>
	<string name="update_history_summ">Days to consider apps new or recent: %s</string>
	<string name="root_installer">Install using root access</string>
	<string name="root_installer_on">Request root access to install, update, and remove packages</string>
	<string name="root_installer_off">Do not request root access to install, update, and remove packages</string>
	<string name="system_installer">Install using system-permissions</string>
	<string name="system_installer_on">Use system permissions to install, update, and remove packages</string>
	<string name="system_installer_off">Do not use system permissions to install, update, and remove packages</string>
	<string name="local_repo_bonjour">Broadcast Local Repo</string>
	<string name="local_repo_bonjour_on">Advertise your local repo using Bonjour (mDNS)</string>
	<string name="local_repo_bonjour_off">Do not advertise your local repo.</string>
	<string name="local_repo_name">Name of your Local Repo</string>
	<string name="local_repo_name_summary">The advertised title of your local repo: %s</string>
	<string name="local_repo_https">Use Private Connection</string>
	<string name="local_repo_https_on">Use encrypted HTTPS:// connection for local repo</string>
	<string name="local_repo_https_off">Use insecure HTTP:// connection for local repo</string>
	<string name="search_results">Search Results</string>
	<string name="app_details">App Details</string>
	<string name="no_such_app">No such app found</string>
	<string name="about_title">About F-Droid</string>
	<string name="about_desc">Originally based on Aptoide.\nReleased under the
		GNU GPLv3 license.</string>
	<string name="about_site">Website: </string>
	<string name="about_mail">Email: </string>
	<string name="about_version">Version: </string>
	<string name="about_website">Website</string>
	<string name="no_repo">You don\'t have any repositories configured!\n\nA
		repository is a source of applications. To add one, press the MENU
		button now and enter the URL.\n\nA repository address looks something
		like
		this: https://f-droid.org/repo</string>
	<string name="inst">Installed</string>
	<string name="not_inst">Not Installed</string>
	<string name="added_on">Added on %s</string>
	<string name="ok">OK</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="repo_add_title">Add new repository</string>
	<string name="repo_add_add">Add</string>
	<string name="cancel">Cancel</string>
	<string name="enable">Enable</string>
	<string name="add_key">Add Key</string>
	<string name="overwrite">Overwrite</string>
	<string name="repo_delete_title">Choose repository to remove</string>
	<string name="repo_update_title">Update repositories</string>
	<string name="tab_noninstalled">Available</string>
	<string name="tab_updates">Updates</string>
	<string name="one_update_available">1 update is available.</string>
	<string name="many_updates_available">%d updates are available.</string>
	<string name="fdroid_updates_available">F-Droid Updates Available</string>
	<string name="process_wait_title">Please Wait</string>
	<string name="process_update_msg">Updating application list…</string>
	<string name="download_server">Getting application from</string>
	<string name="nfc_is_not_enabled">NFC is not enabled!</string>
	<string name="go_to_nfc_settings">Go to NFC Settings…</string>
	<string name="bluetooth_activity_not_found">No Bluetooth send method found, choose one!</string>
	<string name="choose_bt_send">Choose Bluetooth send method</string>
	<string name="send_via_bluetooth">Send via Bluetooth</string>
	<string name="repo_add_url">Repository address</string>
	<string name="repo_add_fingerprint">Fingerprint (optional)</string>
	<string name="repo_exists">This repo already exists!</string>
	<string name="repo_exists_add_fingerprint">This repo is already setup, this will add new key information.</string>
	<string name="repo_exists_enable">This repo is already setup, confirm that you want to re-enable it.</string>
	<string name="repo_exists_and_enabled">The incoming repo is already setup and enabled!</string>
	<string name="repo_delete_to_overwrite">You must first delete this repo before you can add one with a different key!</string>
	<string name="malformed_repo_uri">Ignoring malformed repo URI: %s</string>
	<string name="repo_alrt">The list of used repositories has
		changed.\nDo you
		want to update them?</string>
	<string name="menu_update_repo">Update Repos</string>
	<string name="menu_manage">Repositories</string>
	<string name="menu_send_apk_bt">Bluetooth FDroid.apk…</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_about">About</string>
	<string name="menu_search">Search</string>
	<string name="menu_add_repo">New Repository</string>
	<string name="menu_rem_repo">Remove Repository</string>
	<string name="menu_scan_repo">Find Local Repos</string>
	<string name="menu_launch">Run</string>
	<string name="menu_share">Share</string>
	<string name="menu_install">Install</string>
	<string name="menu_uninstall">Uninstall</string>
	<string name="menu_ignore_all">Ignore All Updates</string>
	<string name="menu_ignore_this">Ignore This Update</string>
	<string name="menu_website">Website</string>
	<string name="menu_issues">Issues</string>
	<string name="menu_source">Source Code</string>
	<string name="menu_upgrade">Upgrade</string>
	<string name="menu_donate">Donate</string>
	<string name="details_installed">Version %s installed</string>
	<string name="details_notinstalled">Not installed</string>
	<string name="corrupt_download">Downloaded file is corrupt</string>
	<string name="download_cancelled">Download cancelled</string>
	<string name="antiadslist">This app contains advertising</string>
	<string name="antitracklist">This app tracks and reports your activity</string>
	<string name="antinonfreeadlist">This app promotes non-free add-ons</string>
	<string name="antinonfreenetlist">This app promotes non-free network services</string>
	<string name="antinonfreedeplist">This app depends on other non-free apps</string>
	<string name="antiupstreamnonfreelist">The upstream source code is not entirely Free</string>
	<string name="display">Display</string>
	<string name="expert">Expert</string>
	<string name="expert_on">Show extra info and enable extra settings</string>
	<string name="expert_off">Hide extras for experienced users</string>
	<string name="search_hint">Search applications</string>
	<string name="appcompatibility">Application compatibility</string>
	<string name="show_incompat_versions">Incompatible versions</string>
	<string name="show_incompat_versions_on">Show app versions incompatible with the device</string>
	<string name="show_incompat_versions_off">Hide app versions incompatible with the device</string>
	<string name="rooted">Root</string>
	<string name="rooted_on">Do not grey out apps requiring root privileges</string>
	<string name="rooted_off">Grey out apps requiring root privileges</string>
	<string name="ignoreTouch">Ignore Touchscreen</string>
	<string name="ignoreTouch_on">Always include apps that require touchscreen</string>
	<string name="ignoreTouch_off">Filter apps normally</string>
	<string name="category_all">All</string>
	<string name="category_whatsnew">What\'s New</string>
	<string name="category_recentlyupdated">Recently Updated</string>
	<string name="local_repo">Local Repo</string>
	<string name="local_repos_title">Local FDroid Repos</string>
	<string name="local_repos_scanning">Discovering local FDroid repos&#8230;</string>
	<string name="local_repo_running">F-Droid is ready to swap</string>
	<string name="waiting_for_ipaddress">waiting for IP address…</string>
	<string name="setup_repo">Setup Local Repo</string>
	<string name="touch_to_configure_local_repo">Touch to view details and allow others to swap your apps.</string>
	<string name="touch_to_turn_on_local_repo">Touch to turn on your local repo.</string>
	<string name="touch_to_turn_off_local_repo">Touch to turn off your local repo.</string>
	<string name="updating">Updating&#8230;</string>
	<string name="update_repo">Update Repo</string>
	<string name="deleting_repo">Deleting current repo&#8230;</string>
	<string name="adding_apks_format">Adding %s to repo&#8230;</string>
	<string name="writing_index_jar">Writing signed index file (index.jar)&#8230;</string>
	<string name="icon">icon</string>
	<string name="fingerprint">Fingerprint:</string>
	<string name="wifi_network">WiFi Network:</string>
	<string name="same_wifi_instructions">To connect to other people\'s devices, make sure both devices are on the same WiFi network.  Then either type the URL above into F-Droid, or scan this QR Code:</string>
	<string name="qr_content_description">QR Code of repo URL</string>
    <string name="repo_url">URL</string>
    <string name="repo_num_apps">Number of apps</string>
    <string name="repo_fingerprint">Fingerprint of Repo Signing Key (SHA-256)</string>
    <string name="repo_description">Description</string>
    <string name="repo_last_update">Last update</string>
    <string name="repo_update">Update</string>
    <string name="repo_name">Name</string>
    <string name="repo_not_yet_updated">This repository has not been used yet.
        In order to view the apps it provides, you will need to update
        it.\n\nOnce updated, the description and other details will
        become available here.
    </string>
    <string name="swap_join_same_wifi">Join the same Wifi as your friend</string>
    <string name="swap_use_bluetooth">Use Bluetooth instead</string>
    <string name="swap_wifi_help">Learn more about Wifi</string>
    <string name="swap">Swap apps</string>
    <string name="swap_view_available_networks">(Tap to open available networks)</string>
    <string name="swap_welcome">Welcome to F-Droid!</string>
    <string name="swap_confirm_connect">Do you ant to get apps from %1$s now?</string>
</resources>