<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_update_repo"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_update_repo"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_swap"
        android:title="@string/swap"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_manage_repos"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_manage"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_bluetooth_apk"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:title="@string/menu_send_apk_bt"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_preferences"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom"/>

</menu>