<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp">
    <!-- Padding is 32px * 0.56 = 18dip -->

    <ImageView
            android:id="@+id/icon"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/icon"
            android:layout_alignParentTop="true"
            android:layout_width="117.6dp"
            android:layout_height="117.6dp"
            android:layout_centerHorizontal="true"/>
            <!-- 210 * 0.56 = 117.6 -->

    <TextView
            android:id="@+id/text_title"
            android:text="@string/swap_welcome"
            style="@style/SwapTheme.Wizard.ReceiveSwap.MainText"
            android:layout_below="@id/icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:lines="1" />
            <!-- 60 * 0.56 = 33.6 -->
            <!-- Temporarily making it smaller than 33.6 until we figure out how to
             prevent line breaks on the hyphen in F-Droid. -->

    <TextView
            android:id="@+id/text_description"
            android:text="@string/swap_confirm_connect"
            style="@style/SwapTheme.Wizard.Text"
            android:layout_below="@id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25.75sp"/>
            <!-- 46px * 0.56 = 25.76sp -->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text_description"
            android:layout_marginTop="45dp">
            <!-- 80px * 0.56 = 45dp -->

        <Button
                android:id="@+id/no_button"
                android:text="@string/no"
                style="@style/SwapTheme.Wizard.ReceiveSwap.Deny"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                />


        <Button
                android:id="@+id/yes_button"
                android:text="@string/yes"
                style="@style/SwapTheme.Wizard.ReceiveSwap.Confirm"
                android:layout_width="0dp"
                android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
