<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:paddingLeft="5px">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="horizontal">

		<TextView android:text="@string/about_version"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="16px" android:textColor="#ffffff" />

		<TextView android:id="@+id/version" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="horizontal">

		<TextView android:id="@+id/site" android:text="@string/about_site"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="16px" android:textColor="#ffffff" />

		<TextView android:id="@+id/sitec" android:text="http://f-droid.org"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="horizontal">

		<TextView android:id="@+id/mail" android:text="@string/about_mail"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textSize="16px" android:textColor="#ffffff" />

		<TextView android:id="@+id/mailc" android:text="admin@f-droid.org"
			android:autoLink="email" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</LinearLayout>

	<TextView android:id="@+id/not" android:text=" "
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:text="@string/about_desc"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:textSize="16px" />

</LinearLayout>
