<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ToggleButton
        android:id="@+id/repoSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/wifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wifi_network" />

        <TextView
            android:id="@+id/wifiNetworkName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fingerprint" />

        <TextView
            android:id="@+id/fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:typeface="monospace" />
    </LinearLayout>

    <TextView
        android:id="@+id/instrucionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/same_wifi_instructions" />

    <ImageView
        android:id="@+id/repoQrCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/qr_content_description" />

</LinearLayout>